Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
proton-c-0.20.0
-
None
Description
Many tests fail when building/testing on recent FreeBSD (10 and 11).
Ultimately this is due to the FreeBSD getnameinfo insisting that the passed in socklen is the exact correct value for the sa_family. Whereas the pn_netaddr_socklen code unconditionally says the length is the sizeof sockaddr_storage - this is rejected by this implementation of getnameinfo.
It's not clear that this is the correct behaviour of getnameinfo, but it's easy enough to allow for.