PROTON-1757: Fix pn_netaddr_socklen for FreeBSD